--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#f3f9fd" media="(prefers-color-scheme: light)">
     
     <!-- Open Graph / Facebook Meta Tags -->
-    <meta property="og:title" content="Niranjan MD">
+    <meta property="og:title" content="ReImage - Image Editor">
     <meta property="og:description" content="Free online image editor to convert formats (PNG, JPEG, WEBP), resize by pixels or percentage, crop, rotate, flip, and apply filters like brightness, contrast, saturation. Optimize images for target file size (KB).">
     <meta property="og:image" content="https://reimage.nimd.me/assets/meta.png">
     <meta property="og:image:width" content="1200">
