--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
             <div class="loader" id="loader" role="status" aria-live="polite">
                 <span class="sr-only">Loading...</span>
             </div>
-            <div id="imagePreviewContainer" class="w-full h-full image-preview-container"> <!-- Removed flex, items-center, justify-center from here -->
-                <div id="canvasWrapper"> <!-- This wrapper will be centered by the parent flex container -->
+            <div id="imagePreviewContainer" class="w-full h-full image-preview-container"> 
+                <div id="canvasWrapper"> <!-- cntrd by parent flx -->
                     <canvas id="imageCanvas" aria-label="Image preview canvas"></canvas>
                     <canvas id="cropCanvasOverlay"></canvas>
                 </div>
-                <div id="imagePlaceholder" class="text-center text-gray-500" aria-hidden="false" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"> <!-- Keep placeholder centered if no image -->
+                <div id="imagePlaceholder" class="text-center text-gray-500" aria-hidden="false" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                     <i class="fas fa-image text-6xl mb-4" aria-hidden="true"></i>
                     <p class="text-xl">Your image preview will appear here</p>
                 </div>
